# kde3-kdenetwork

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  configure
dcoprss/: CMakeLists.txt  rssnewsfeed.h
filesharing/: CMakeLists.txt
filesharing/simple/: CMakeLists.txt
kdict/: CMakeLists.txt
kdict/applet/: CMakeLists.txt  kdictapplet.cpp
kdict/pics/: CMakeLists.txt
kdnssd/ioslave/: CMakeLists.txt
kdnssd/kdedmodule/: CMakeLists.txt
kfile-plugins/torrent/: CMakeLists.txt
kget/: CMakeLists.txt
kget/icons/: CMakeLists.txt
kget/kget_plug_in/: CMakeLists.txt  kget_plug_in.cpp
kget/pics/: CMakeLists.txt
kget/sounds/: CMakeLists.txt
knewsticker/: CMakeLists.txt
knewsticker/common/: CMakeLists.txt
knewsticker/knewstickerstub/: CMakeLists.txt
knewsticker/kntsrcfilepropsdlg/: CMakeLists.txt
kopete/: CMakeLists.txt  ConfigureChecks.cmake
kopete/kopete/: CMakeLists.txt  kopeteapplication.cpp
kopete/kopete/addaccountwizard/: CMakeLists.txt
kopete/kopete/addcontactwizard/: CMakeLists.txt
kopete/kopete/chatwindow/: CMakeLists.txt  krichtexteditpart.cpp
kopete/kopete/config/: CMakeLists.txt
kopete/kopete/contactlist/: CMakeLists.txt  kopetegroupviewitem.cpp
kopete/kopete/kconf_update/: CMakeLists.txt
kopete/libkopete/: CMakeLists.txt  kautoconfig.cpp  kopeteaccount.cpp  kopetepasswordedaccount.h  kopeteutils.cpp
kopete/libkopete/avdevice/: CMakeLists.txt  videodevice.h  videodevicepool.cpp
kopete/libkopete/private/: CMakeLists.txt
kopete/libkopete/ui/: CMakeLists.txt  metacontactselectorwidget.h
kopete/plugins/: CMakeLists.txt
kopete/plugins/addbookmarks/: CMakeLists.txt
kopete/plugins/alias/: CMakeLists.txt
kopete/plugins/autoreplace/: CMakeLists.txt
kopete/plugins/connectionstatus/: CMakeLists.txt
kopete/plugins/contactnotes/: CMakeLists.txt
kopete/plugins/cryptography/: CMakeLists.txt
kopete/plugins/highlight/: CMakeLists.txt
kopete/plugins/history/: CMakeLists.txt  converter.cpp  historydialog.cpp  historylogger.cpp
kopete/plugins/latex/: CMakeLists.txt
kopete/plugins/motionautoaway/: CMakeLists.txt  motionawayplugin.cpp
kopete/plugins/netmeeting/: CMakeLists.txt
kopete/plugins/nowlistening/: CMakeLists.txt  nlnoatun.cpp
kopete/plugins/smpppdcs/: CMakeLists.txt  detectordcop.cpp
kopete/plugins/statistics/: CMakeLists.txt  ConfigureChecks.cmake  statisticsdb.cpp  statisticsdb.h
kopete/plugins/texteffect/: CMakeLists.txt
kopete/plugins/translator/: CMakeLists.txt
kopete/plugins/webpresence/: CMakeLists.txt
kopete/protocols/: CMakeLists.txt
kopete/protocols/gadu/: CMakeLists.txt  ConfigureChecks.cmake
kopete/protocols/groupwise/: CMakeLists.txt
kopete/protocols/irc/: CMakeLists.txt
kopete/protocols/jabber/: CMakeLists.txt
kopete/protocols/meanwhile/: CMakeLists.txt  ConfigureChecks.cmake
kopete/protocols/msn/: CMakeLists.txt
kopete/protocols/oscar/: CMakeLists.txt
kopete/protocols/sms/: CMakeLists.txt
kopete/protocols/testbed/: CMakeLists.txt  testbedaccount.h
kopete/protocols/winpopup/: CMakeLists.txt
kopete/protocols/yahoo/: CMakeLists.txt  Makefile.in  yahooaccount.cpp  yahooaccount.h  yahoocontact.cpp  yahoocontact.h
kopete/sounds/: CMakeLists.txt
kopete/styles/: CMakeLists.txt
kopete/styles/Hacker/: CMakeLists.txt
kopete/styles/Konqi/: CMakeLists.txt
kpf/: CMakeLists.txt
kpf/src/: CMakeLists.txt  DirSelectWidget.cpp  DirectoryLister.cpp
kppp/: CMakeLists.txt  ConfigureChecks.cmake  acctselect.cpp  providerdb.cpp  ruleset.h
kppp/DB/: CMakeLists.txt
kppp/DB/Provider/: CMakeLists.txt
kppp/Rules/: CMakeLists.txt
kppp/Rules/Argentina/: CMakeLists.txt
kppp/Rules/Australia/: CMakeLists.txt
kppp/Rules/Austria/: CMakeLists.txt
kppp/Rules/Bangladesh/: CMakeLists.txt
kppp/Rules/Belgium/: CMakeLists.txt
kppp/Rules/Bosnia_and_Herzegovina/: CMakeLists.txt
kppp/Rules/Brasil/: CMakeLists.txt
kppp/Rules/Croatia/: CMakeLists.txt
kppp/Rules/Czechia/: CMakeLists.txt
kppp/Rules/Denmark/: CMakeLists.txt
kppp/Rules/Estonia/: CMakeLists.txt
kppp/Rules/Finland/: CMakeLists.txt
kppp/Rules/France/: CMakeLists.txt
kppp/Rules/Germany/: CMakeLists.txt
kppp/Rules/Greece/: CMakeLists.txt
kppp/Rules/HongKong/: CMakeLists.txt
kppp/Rules/Hungary/: CMakeLists.txt
kppp/Rules/Iceland/: CMakeLists.txt
kppp/Rules/India/: CMakeLists.txt
kppp/Rules/Indonesia/: CMakeLists.txt
kppp/Rules/Ireland/: CMakeLists.txt
kppp/Rules/Israel/: CMakeLists.txt
kppp/Rules/Italy/: CMakeLists.txt
kppp/Rules/Jamaica/: CMakeLists.txt
kppp/Rules/Japan/: CMakeLists.txt
kppp/Rules/Kazakhstan/: CMakeLists.txt
kppp/Rules/Luxembourg/: CMakeLists.txt
kppp/Rules/Macedonia/: CMakeLists.txt
kppp/Rules/Malaysia/: CMakeLists.txt
kppp/Rules/Netherlands/: CMakeLists.txt
kppp/Rules/Norway/: CMakeLists.txt
kppp/Rules/Poland/: CMakeLists.txt
kppp/Rules/Portugal/: CMakeLists.txt
kppp/Rules/Romania/: CMakeLists.txt
kppp/Rules/Russia/: CMakeLists.txt
kppp/icons/: CMakeLists.txt
kppp/logview/: CMakeLists.txt  log.cpp
kppp/pixmaps/: CMakeLists.txt
krdc/: CMakeLists.txt
krdc/rdp/: CMakeLists.txt
krdc/vnc/: CMakeLists.txt
krfb/: CMakeLists.txt  ConfigureChecks.cmake
krfb/kcm_krfb/: CMakeLists.txt  kcm_krfb.cpp
krfb/kinetd/: CMakeLists.txt
krfb/krfb/: CMakeLists.txt
krfb/krfb_httpd/: CMakeLists.txt
krfb/libvncserver/: CMakeLists.txt
krfb/srvloc/: CMakeLists.txt
ksirc/: CMakeLists.txt
ksirc/KSOpenkSirc/: CMakeLists.txt
ksirc/KSPrefs/: CMakeLists.txt
ksirc/KSProgress/: CMakeLists.txt
ksirc/KSTicker/: CMakeLists.txt
ksirc/icons/: CMakeLists.txt
ksirc/img/: CMakeLists.txt
ktalkd/: CMakeLists.txt  ConfigureChecks.cmake
ktalkd/kcmktalkd/: CMakeLists.txt
ktalkd/ktalkd/: CMakeLists.txt
ktalkd/ktalkdlg/: CMakeLists.txt
ktalkd/mail.local/: CMakeLists.txt
librss/: CMakeLists.txt
wifi/: CMakeLists.txt  ConfigureChecks.cmake  configure.in.in  interface_wireless_wirelessextensions.cpp  kwifimanager.cpp
wifi/kcmwifi/: CMakeLists.txt
wifi/kwireless/: CMakeLists.txt
wifi/locations/: CMakeLists.txt
wifi/pixmaps/: CMakeLists.txt
(+244 files in other folders)
