#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    connect0.png connect1.png connect2.png connect3.png connect4.png
    connect5.png connect6.png connect7.png try0.png try1.png try2.png
    try3.png try4.png try5.png try6.png try7.png md_delayed.png
    md_finished.png md_queued.png md_scheduled.png retrying.png
    target.png
  DESTINATION ${DATA_INSTALL_DIR}/kget/pics )
