#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    KGet_Added.ogg KGet_Finished.ogg KGet_Finished_All.ogg
    KGet_Started.ogg
  DESTINATION ${SOUND_INSTALL_DIR} )
