#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    Kopete_Event.ogg Kopete_Received.ogg
    Kopete_Sent.ogg Kopete_User_is_Online.ogg
  DESTINATION ${SOUND_INSTALL_DIR} )
