#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( Kopete )
add_subdirectory( Hacker )
add_subdirectory( Clean )
add_subdirectory( Clear )
add_subdirectory( Konqi )
add_subdirectory( Retropete )
add_subdirectory( Gaim )
